# LoBLE-Scout

./: README.md
Docs/: Projet_final.pptx
src/Mon_Apk/: CMakeLists.txt  arm_toolchain.cmake  prj.conf  toolchain_force.cmake  zephyr_env.ps1
src/Mon_Apk/boards/: rak11720.overlay  rak4631.overlay
src/Mon_Apk/src/: ble_uart.c  ble_uart.h  main.c
src/Mon_Apk/workspace/Ancien/: prj.conf
src/Mon_Apk/workspace/boards/custom/rak11720/: rak11720.dts  rak11720_apollo3-pinctrl.dtsi
src/Mon_Apk/workspace/src/: main.c  ports.c
